--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "mongoose": "^8.18.1"
+    "@supabase/supabase-js": "^2.39.0"
   },
   "keywords": [
     "eventos",
@@ -25,6 +25,6 @@
     "api",
     "nodejs",
     "express",
-    "mongodb"
+    "supabase"
   ]
 }
