Remove deprecated SQL migration scripts and update Netlify and Vercel configurations for improved static file serving. Adjusted build settings to publish from the 'public' directory and streamlined redirect rules.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,3 @@
 [build]
   command = "npm install"
-  publish = "."
-
-[[redirects]]
-  from = "/api/*"
-  to = "/index.js"
-  status = 200
-
-[[redirects]]
-  from = "/*"
-  to = "/index.js"
-  status = 200
+  publish = "public"
