--- a/vercel.json
+++ b/vercel.json
@@ -12,8 +12,12 @@
       "dest": "/index.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/api-info",
       "dest": "/index.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/index.html"
     }
   ]
 }
